Fixed Bugs
Also increased the size for the third size option as it was too small.

--- a/style.css
+++ b/style.css
@@ -231,18 +231,18 @@ td {
 
 @media only screen and (max-width: 567px) {
   body, ol, #advice {
-    font-size: 16px;
+    font-size: 20px;
   }
   #message, #trance, #stress, #survivor, #break.big, h1 {
-    font-size: 30px;
+    font-size: 40px;
   }
 
   #chiptune, #break, #stress a, #standup, #changeclothes, #question {
-    font-size: 22px;
+    font-size: 30px;
   }
 
   input[type='checkbox'] {
-    width:12px;
-    height:12px;
+    width:15px;
+    height:15px;
   }
 }
